# ChemistryEngineeringGame

./: .gitignore  CMakeLists.txt
NOTES/: map_notes.txt
assets/shaders/: default.frag  default.vert
src/: main.c
src/core/: application.c  application.h  camera.c  camera.h  mesh.c  mesh.h  renderer.c  renderer.h  time.c  window.c  window.h
src/core/application/: application.c  application.h
src/core/mesh/: mesh.c  mesh.h
src/core/renderer/: renderer.c  renderer.h
src/core/time/: time.c  time.h
src/core/window/: window.h
src/game/: gameobject.c  gameobject.h  worldtile.c  worldtile.h
src/game/world/: tile.h  world.c  world.h
src/game/world/tile/: tile.h
src/game/world/world/: world.c  world.h
src/graphics/: shader.c  shader.h  texture.c  texture.h
src/graphics/shader/: shader.c  shader.h
src/graphics/texture/: texture.c
